feat(catalog): qualify Qwen2.5 Coder native RAG